# object_detection

./: .gitignore  eval.py  pyproject.toml  train.py
det/datasets/: __init__.py  coco.py  datamodule.py
det/model/: fcos_detector_module.py
det/types/: __init__.py  detection.py  split.py  state.py
det/utils/: img.py
tools/: dataset_sizes.py  view_dataset.py
