[project]
name = "obj-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentationsx>=2.0.12",
    "click>=8.3.0",
    "jsonargparse[pytorch-extra,signatures]>=4.42.0",
    "lightning[pytorch-extra,signatures]>=2.5.5",
    "matplotlib>=3.10.7",
    "opencv-python>=4.11.0.86",
    "rich>=14.2.0",
    "roboflow>=1.2.11",
    "supervision>=0.26.1",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "torchtyping>=0.1.5",
    "torchvision>=0.24.0",
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent" # don't lint imported modules. Remove once the entire codebase is compliant
ignore_missing_imports = true
no_implicit_optional = true
python_version = "3.8"
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 120
target-version = "py38"
fix = true
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "A001",
  "A002",
  "A005",
  "ANN001", # Type annotation
  "ANN002",
  "ANN003",
  "ANN201", # Partially autofixable None return useful for mypy
  "ANN202", # Partially autofixable, useful for mypy
  "ANN204", # Partially autofixable, useful for mypy
  "ANN205",
  "ANN206",
  "ANN401",
  "ARG001",
  "ARG002",
  "ARG005",
  "ASYNC230",
  "B006", # TODO(SW-1831): Roll out flake8-bugbear (Autofixable)
  "B007", # TODO(SW-1831): Roll out flake8-bugbear (Partially Autofixable)
  "B008", # TODO(SW-1831): Roll out flake8-bugbear
  "B017", # TODO(SW-1831): Roll out flake8-bugbear
  "B023", # TODO(SW-1831): Roll out flake8-bugbear
  "B024", # TODO(SW-1831): Roll out flake8-bugbear (single occurrence in packages/frameworks/data/lum_datalake)
  "B027", # TODO(SW-1831): Roll out flake8-bugbear (single occurrence in SPO but fix breaks the SPO)
  "B035", # TODO(SW-1831): Roll out flake8-bugbear (single occurrence in packages/frameworks/data/lum_datalake)
  "B904", # TODO(SW-1831): Roll out flake8-bugbear
  "BLE001",
  "C901", # Identify too complex structure
  "COM", # Trailing comma is done via formatter so we don't need that
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D202", # Autofixable
  "D203", # Incompatible with D211
  "D205",
  "D209", # Autofixable
  "D212", # Autofixable
  "D213", # Incompatible with D212
  "D400",
  "D401",
  "D404",
  "D413", # Autofixable
  "D415", # Partially Autofixable
  "D417", # Make sure every argument is documented, we probably don't want that
  "DTZ001",
  "DTZ002",
  "DTZ003",
  "DTZ004",
  "DTZ005",
  "DTZ006",
  "DTZ007",
  "DTZ011",
  "DTZ901", # datetime-min-max
  "E402", # TODO(SW-1745): Roll out parts of pylint
  "E501", # TODO(SW-1745): Roll out parts of pylint
  "E721", # TODO(SW-1745): Roll out parts of pylint
  "E722", # TODO(SW-1745): Roll out parts of pylint
  "ERA001", # Remove dead code
  "EXE", # Only in packages/frameworks/data/lum_datalake
  "FA100",
  "FAST002", # Autofixable but breaks packages/frameworks/sentinel_process_orchestrator/vehicle_api/vehicle_api/routes/vehicle_process.py
  "FBT001",
  "FBT002",
  "FBT003",
  "FIX002",
  "G001", # Logging best practices (single occurrence in Algo)
  "G003", # Logging best practices
  "G004", # Logging best practices
  "INP001", # With bazel, we don't need __init__.py files
  "ISC001", # Conflicts with formatter so we don't want that enabled
  "ISC003",
  "LOG015", # Logging best practices
  "N801", # Will replace the flake8 PEP naming plugin
  "N802", # Will replace the flake8 PEP naming plugin
  "N803", # Will replace the flake8 PEP naming plugin
  "N804", # Will replace the flake8 PEP naming plugin
  "N805", # Will replace the flake8 PEP naming plugin
  "N806", # Will replace the flake8 PEP naming plugin
  "N815", # Will replace the flake8 PEP naming plugin
  "N818", # Will replace the flake8 PEP naming plugin
  "PD008",
  "PD011",
  "PD015",
  "PD901",
  "PERF203",
  "PERF401", # Improve performance using list comprehensions
  "PERF402",
  "PLC0415", # import-outside-top-level
  "PLE0302", # TODO(SW-1745): Roll out pylint rules of ruff -> single error in packages/frameworks/data/lum_datalake
  "PLE1205", # TODO(SW-1745): Roll out pylint rules of ruff
  "PLR0911", # TODO(SW-1745): Roll out pylint rules of ruff
  "PLR0912", # TODO(SW-1745): Roll out pylint rules of ruff
  "PLR0913", # TODO(SW-1745): Roll out pylint rules of ruff
  "PLR0915", # TODO(SW-1745): Roll out pylint rules of ruff
  "PLR1704", # TODO(SW-1745): Roll out pylint rules of ruff
  "PLR2004", # TODO(SW-1745): Roll out pylint rules of ruff
  "PLW0602", # TODO(SW-1745): Roll out pylint rules of ruff
  "PLW0603", # TODO(SW-1745): Roll out pylint rules of ruff
  "PLW1508", # invalid-envvar-default
  "PLW1509", # TODO(SW-1745): Roll out pylint rules of ruff -> single error in vcc_lidar_sensor_service_tests
  "PLW2901", # TODO(SW-1745): Roll out pylint rules of ruff
  "PT009", # TODO(SW-1813): Roll out pytest
  "PT011", # TODO(SW-1813): Roll out pytest
  "PT019", # TODO(SW-1813): Roll out pytest
  "PT027", # TODO(SW-1813): Roll out pytest
  "PT028", # pytest-parameter-with-default-argument
  "PTH100", # Will replace the flake8 pathlib plugin
  "PTH102", # mkdir
  "PTH103", # mkdir
  "PTH104", # rename
  "PTH107", # remove
  "PTH110", # exists
  "PTH112", # isdir
  "PTH113", # isfile
  "PTH118", # join
  "PTH119", # basename
  "PTH120", # dirname
  "PTH123", # open
  "PTH202", # size
  "PTH207", # glob
  "PTH208", # os-listdir
  "PYI024",
  "PYI034",
  "RUF009",
  "RUF012",
  "RUF100", # Autofixable (Keep until everything is on bazel)
  "S101", # Use of assert is required for pytest (maybe enable for tests only)
  "S104", # Security relevant checks
  "S105", # Security relevant checks
  "S106", # Security relevant checks
  "S108", # Security relevant checks (usage of /tmp)
  "S110", # Security relevant checks (consider logging exception)
  "S112", # Security relevant checks (except - continue) -> single Algo only
  "S113", # Security relevant checks (requests call without timeout)
  "S202", # Security relevant checks (extraction of tarball)
  "S301", # Security relevant checks
  "S310", # Security relevant checks
  "S311", # Security relevant checks
  "S314", # Security relevant checks
  "S324", # Security relevant checks
  "S501", # Security relevant checks (disabled SSL for requests calls)
  "S506", # Security relevant checks
  "S507", # Security relevant checks
  "S602", # Security relevant checks
  "S603", # Security relevant checks
  "S604", # Security relevant checks (single usage in dei)
  "S605", # Security relevant checks (usage of popen)
  "S607", # Security relevant checks
  "S608", # Security relevant checks
  "S701", # Security relevant checks
  "SIM115",
  "SLF001",
  "T201",
  "T203",
  "TD002", # We don't want author names in todos
  "TD003", # Links in todos are right now optional
  "TD004", # Using colon as in TODO(ABC-1234): could create more consistency
  "TRY002",
  "TRY003",
  "TRY300",
  "TRY401"
]

[tool.vulture]
min_confidence = 100
ignore_decorators = ["@pytest.fixture"]
exclude = [
  "*test_*.py" # vulture doesn't understand pytest fixtures
]
